@@ -1,3 +1,8 @@
+2017-09-14  Niels Möller  <nisse@lysator.liu.se>
+
+	* ecc-mod.c (ecc_mod): Workaround to silence a false positive from
+	the clang static analyzer.
+
 2017-09-12  Niels Möller  <nisse@lysator.liu.se>
 
 	* testsuite/testutils.h (mpn_zero_p): Avoid redefining mpn_zero_p
